# src/main/java/org/openapitools/api/V1SigningBasketsApi.java
@@ -1,0 +1,112 @@
+/*
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (7.2.0).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+package org.openapitools.api;
+
+import org.openapitools.model.Error400;
+import org.openapitools.model.Error401;
+import org.openapitools.model.Error403;
+import org.openapitools.model.Error404;
+import org.openapitools.model.Error429;
+import org.openapitools.model.SigningBasketStatus;
+import io.swagger.v3.oas.annotations.ExternalDocumentation;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.Parameters;
+import io.swagger.v3.oas.annotations.media.ArraySchema;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.security.SecurityRequirement;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import io.swagger.v3.oas.annotations.enums.ParameterIn;
+import io.swagger.v3.oas.annotations.media.ExampleObject;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.*;
+import org.springframework.web.context.request.NativeWebRequest;
+import org.springframework.web.multipart.MultipartFile;
+
+import javax.validation.Valid;
+import javax.validation.constraints.*;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import javax.annotation.Generated;
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2026-02-13T04:58:28.589036433Z[Etc/UTC]", comments = "Generator version: 7.2.0")
+@Validated
+@Tag(name = "Signing Baskets", description = "APIs for signing basket management")
+public interface V1SigningBasketsApi {
+
+    default Optional<NativeWebRequest> getRequest() {
+        return Optional.empty();
+    }
+
+    String PATH_GET_V1_SIGNING_BASKETS_BASKET_ID_STATUS = "/v1/signing-baskets/{basketId}/status";
+    /**
+     * GET /v1/signing-baskets/{basketId}/status : Get the status of a signing basket
+     *
+     * @param basketId Unique identifier of the signing basket (required)
+     * @return OK (status code 200)
+     *         or Bad Request (status code 400)
+     *         or Unauthorized (status code 401)
+     *         or Forbidden (status code 403)
+     *         or Not Found (status code 404)
+     *         or Too Many Requests (status code 429)
+     */
+    @Operation(
+        operationId = "getV1SigningBasketsBasketIdStatus",
+        summary = "Get the status of a signing basket",
+        tags = { "Signing Baskets" },
+        responses = {
+            @ApiResponse(responseCode = "200", description = "OK", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = SigningBasketStatus.class))
+            }),
+            @ApiResponse(responseCode = "400", description = "Bad Request", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = Error400.class))
+            }),
+            @ApiResponse(responseCode = "401", description = "Unauthorized", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = Error401.class))
+            }),
+            @ApiResponse(responseCode = "403", description = "Forbidden", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = Error403.class))
+            }),
+            @ApiResponse(responseCode = "404", description = "Not Found", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = Error404.class))
+            }),
+            @ApiResponse(responseCode = "429", description = "Too Many Requests", content = {
+                @Content(mediaType = "application/json", schema = @Schema(implementation = Error429.class))
+            })
+        },
+        security = {
+            @SecurityRequirement(name = "OAuth2"),
+            @SecurityRequirement(name = "BasicAuth")
+        }
+    )
+    @RequestMapping(
+        method = RequestMethod.GET,
+        value = V1SigningBasketsApi.PATH_GET_V1_SIGNING_BASKETS_BASKET_ID_STATUS,
+        produces = { "application/json" }
+    )
+    default ResponseEntity<SigningBasketStatus> getV1SigningBasketsBasketIdStatus(
+        @Parameter(name = "basketId", description = "Unique identifier of the signing basket", required = true, in = ParameterIn.PATH) @PathVariable("basketId") String basketId
+    ) {
+        getRequest().ifPresent(request -> {
+            for (MediaType mediaType: MediaType.parseMediaTypes(request.getHeader("Accept"))) {
+                if (mediaType.isCompatibleWith(MediaType.valueOf("application/json"))) {
+                    String exampleString = "{ \"transactionStatus\" : \"ACTC\" }";
+                    ApiUtil.setExampleResponse(request, "application/json", exampleString);
+                    break;
+                }
+            }
+        });
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+
+    }
+
+}
